# banking_system

./: README.md  USAGE_GUIDE.md  run_banking_system.bat  run_banking_system.ps1
backend/: CMakeLists.txt
backend/data/accounts/: accounts.csv
backend/data/transactions/: transactions.csv
backend/data/users/: users.csv
backend/include/core/: Database.h
backend/include/models/: Account.h  Transaction.h  User.h
backend/include/services/: ApiServer.h  BankingService.h
backend/src/: main.cpp
backend/src/core/: Database.cpp
backend/src/models/: Account.cpp  Transaction.cpp  User.cpp
backend/src/services/: ApiServer.cpp  BankingService.cpp
config/: config.json
frontend/: app.py  requirements.txt
frontend/utils/: helpers.py
scripts/: build.bat  build.sh  s.sh
web/: app.js  index.html
